--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,46 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+p {
+  font-size: 1em;
+  line-height: 20px;
+  color: #fff;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+/** Header **/
+.header {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background: #fec63e;
+  padding: 15px 0;
+}
+
+.header-menu {
+  text-align: right;
+}
+
+.header-menu ul li {
+  display: inline-block;
+  margin-left: 20px;
+  margin-top: 20px;
+}
+
+.header-menu ul li a {
+  font-size: 1em;
+  font-weight: bold;
+  text-decoration: none;
+  text-transform: uppercase;
+  line-height: 20px;
+  color: #000;
+  padding: 10px 0;
+}
+
+.header-menu ul li a:hover {
+  color: #fff;
+  border-bottom: 1px solid #fff;
+}
+
+
+
