--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,23 @@ p {
   font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
+.btn {
+  border: 3px solid #fec63e;
+  padding: 10px 30px;
+  color: #fec63e;
+  font-size: 1em;
+  font-weight: bold;
+  line-height: 20px;
+  text-transform: uppercase;
+  text-decoration: none;
+  letter-spacing: .1em;
+}
+
+.btn:hover {
+  background: #fec63e;
+  color: #fff;
+}
+
 /** Header **/
 .header {
   position: fixed;
@@ -45,4 +62,47 @@ p {
 }
 
 
+/** Intro **/
+.introducao {
+  width: 100%;
+  height: 380px;
+  background: url("../img/bg.jpg") no-repeat center;
+  background-size: cover;
+  margin-top: 95px;
+  text-align: center;
+  padding-top: 90px;
+}
+
+.introducao h1 {
+  font-size: 48px;
+  font-weight: bold;
+  color: #fff;
+  text-transform: uppercase;
+}
+
+.quote-externo {
+  max-width: 300px;
+  margin: 0 auto 40px;
+}
+
+.quote-externo p {
+  font-style: italic;
+}
+
+.quote-externo p::before, .quote-externo p::after {
+  content: '';
+  width: 60px;
+  height: 3px;
+  background: #fff;
+  display: block;
+  margin: 12px auto 10px auto;
+}
+
+.quote-externo cite {
+  font-style: normal;
+  font-weight: bold;
+  color: #fff;
+  text-transform: uppercase; 
+  letter-spacing: .1em;
+}
 
