--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,26 @@ p {
   color: #fff;
 }
 
+.subtitulo {
+  font-size: 24px;
+  font-weight: bold;
+  line-height: 30px;
+  text-transform: uppercase;
+  text-align: center;
+  letter-spacing: .1em;
+  color: #000;
+  margin-bottom: 40px;
+}
+
+.subtitulo::after{
+  content: '';
+  width: 60px;
+  height: 3px;
+  background: #000;
+  display: block;
+  margin: 8px auto;
+}
+
 /** Header **/
 .header {
   position: fixed;
@@ -106,3 +126,51 @@ p {
   letter-spacing: .1em;
 }
 
+/** Produtos **/
+.produtos {
+  padding: 60px 0;
+}
+
+.produtos-lista li {
+  background: #fec63e;
+  text-align: center;
+}
+
+.produtos-lista-icone {
+  background: #000;
+  padding: 20px;
+}
+
+.produtos-lista li h3 {
+  font-size: 18px;
+  font-weight: bold;
+  line-height: 25px;
+  text-transform: uppercase;
+  letter-spacing: .1em;
+  margin-top: 20px;
+}
+
+.produtos-lista li h3::after {
+  content: '';
+  width: 60px;
+  height: 3px;
+  background: #000;
+  display: block;
+  margin: 2px auto ;
+}
+
+.produtos-lista li p {
+  color:#000;
+  padding: 10px 20px 20px 20px;
+}
+
+.call {
+  text-align: center;
+  padding-top: 40px;
+  clear: both;
+}
+
+.call p {
+  color: #000;
+  margin-bottom: 20px;
+}
