--- a/css/style.css
+++ b/css/style.css
@@ -175,3 +175,26 @@ p {
   color: #000;
   margin-bottom: 20px;
 }
+
+/** Portifolio **/
+.portifolio {
+  width: 100%;
+  background: #000;
+  padding: 40px 0;
+}
+
+.portifolio .subtitulo {
+  color: #fec63e
+}
+
+.portifolio .subtitulo::after {
+  background: #fec63e ;
+}
+
+.portifolio-lista li:last-child {
+  margin-top: 20px;
+}
+
+.portifolio p {
+  color: #fff
+}
