--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,10 @@ p {
   font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
+img {
+  display: block;
+}
+
 .btn {
   border: 3px solid #fec63e;
   padding: 10px 30px;
@@ -89,7 +93,7 @@ p {
   height: 380px;
   background: url("../img/bg.jpg") no-repeat center;
   background-size: cover;
-  margin-top: 95px;
+  margin-top: 92px;
   text-align: center;
   padding-top: 90px;
 }
