feat: qualidade section

--- a/css/style.css
+++ b/css/style.css
@@ -202,3 +202,55 @@ img {
 .portifolio p {
   color: #fff
 }
+
+/** Qualidade **/
+.qualidade {
+  padding: 60px 0;
+}
+
+.qualidade::after {
+  content: "";
+  width: 634px;
+  height: 83px;
+  display: block;
+  background: url('../img/linhas.png') no-repeat center;
+  position:absolute;
+  top: 209px;
+  right: 162px;
+  z-index: -1;
+}
+
+.qualidade img {
+  margin: 0 auto;
+}
+
+.qualidade-lista {
+  padding-top: 20px;
+}
+
+.qualidade-lista li {
+  text-align: center;
+  padding: 0 40px;
+}
+
+.qualidade-lista li h3 {
+  font-size: 18px;
+  font-weight: bold;
+  line-height: 25px;
+  text-transform: uppercase;
+  letter-spacing: .1em;
+  margin-top: 20px;
+}
+
+.qualidade-lista li h3::after {
+  content: '';
+  width: 60px;
+  height: 3px;
+  background: #000;
+  display: block;
+  margin: 6px auto ;
+}
+
+.qualidade-lista li p {
+  color: #000;
+}
