--- a/css/style.css
+++ b/css/style.css
@@ -254,3 +254,77 @@ img {
 .qualidade-lista li p {
   color: #000;
 }
+
+/** Final **/
+.final {
+  width: 100%;
+  height: 220px;
+  background: url('../img/bg-footer.jpg') no-repeat center;
+  background-size: cover;
+  text-align: center;
+  padding-top: 40px;
+}
+
+.quebra .quote-externo {
+  max-width: 400px;
+}
+
+/** Footer **/
+.footer {
+  width: 100%;
+  background: #000;
+  color: #fff;
+  padding: 20px;
+}
+
+.footer h3 {
+  font-size: 18px;
+  font-weight: bold;
+  line-height: 25px;
+  color: #fec63e;
+  text-transform: uppercase;
+  letter-spacing: .1em;
+}
+
+.footer h3::after {
+  content: '';
+  display: block;
+  width: 60px;
+  height: 3px;
+  background: #fec63e;
+  margin: 6px 0 12px 0;
+}
+
+.footer-historia {
+  padding-right: 40px;
+}
+
+.footer-contato ul li {
+  font-size: 14px;
+  line-height: 25px;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  list-style-type: square;
+} 
+
+.footer-redes-sociais ul li {
+  display: inline-block;
+  margin-right: 10px;
+}
+
+.footer-redes-sociais ul li a {
+  border: 3px solid #fec63e;
+  display: block;
+  padding: 10px;
+}
+
+.copy {
+  width: 100%;
+  background: #fec63e;
+  padding: 20px 0;
+}
+
+.copy p {
+  color: #000;
+  font-size: 12px;
+  text-align: center;
+}
