--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,50 @@ img {
   margin: 8px auto;
 }
 
+.introducao-interna {
+  width: 100%;
+  height: 160px;
+  margin-top: 92px;
+  padding-top: 30px;
+  text-align: center;
+  color: #fff;
+}
+
+.introducao-interna h1 {
+  font-size: 36px;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
+.introducao-interna h1::after {
+  content: ""; 
+  display: block;
+  width: 60px;
+  height: 3px;
+  background: #fff;
+  margin: 6px auto 10px auto;
+}
+
+.subtitulo-interno {
+  font-size: 24px;
+  font-weight: bold;
+  line-height: 30px;
+  text-transform: uppercase;
+  letter-spacing: .1em;
+  color: #000;
+  margin-bottom: 20px;
+}
+
+.subtitulo-interno::after{
+  content: '';
+  width: 60px;
+  height: 3px;
+  background: #000;
+  display: block;
+  margin: 8px 0;
+}
+
+
 /** Header **/
 .header {
   position: fixed;
@@ -229,6 +273,7 @@ img {
 
 .qualidade-lista {
   padding-top: 20px;
+  overflow: hidden; /* clear-fix */
 }
 
 .qualidade-lista li {
